2005-04-21 Sebastian Spaeth <Sebastian@SSpaeth.de>

	* monotone.texi: add command reference docs about kill_rev_locally
	
2005-04-21  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc (apply_path_rearrangement_can_fastpath) 
	(apply_path_rearrangement_fastpath) 
	(apply_path_rearrangement_slowpath, apply_path_rearrangement):
	Refactor into pieces, so all versions of apply_path_rearrangement
	can take a fast-path when possible.

2005-04-21  Jeremy Cowgar  <jeremy@cowgar.com>

	* commands.cc: Renamed maybe_show_multiple_heads to
	  notify_if_multiple_heads, renamed headSize to head_size for
	  coding standards/consistency.
	* tests/t_multiple_heads_msg.at: Added to monotone this time.

2005-04-20  Jeremy Cowgar  <jeremy@cowgar.com>

	* commands.cc: Added maybe_show_multiple_heads, update now notifies
	  user of multiple heads if they exist, commit now notifies user
	  if their commit created a divergence.
	* tests/t_multiple_heads_msg.at: Added
	* testsuite.at: Added above test

2005-04-20  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (EXTRA_DIST): Put $(wildcard) around "debian/*", so
	it will actually work.

2005-04-20  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (EXTRA_DIST): Include tests, even when not building
	packages out in the source directory.

2005-04-20  Matthew Gregan  <kinetik@orcon.net.nz>

	* commands.cc (kill_rev_locally): Move up with rest of non-CMD()
	functions.  Mark static.  Minor whitespace cleanup.
	* commands.hh (kill_rev_locally): Declaration not needed now.

2005-04-20 Sebastian Spaeth <Sebastian@SSpaeth.de>
	* automate.cc: fix typo, add sanity check to avoid empty r_id's
	bein passed in. The automate version was bumped to 0.2 due to
	popular request of a single person.
	* t_automate_ancestors.at: adapt test; it passes now

2005-04-20 Sebastian Spaeth <Sebastian@SSpaeth.de>
	* testuite.at:
	* t_automate_ancestors.at: new test; automate ancestors. This is still