@@ -1,3 +1,8 @@
+2005-04-21  Richard Levitte  <richard@levitte.org>
+
+	* Makefile.am (%.eps): create .eps files directly from .ps files,
+	using ps2eps.
+
 2005-04-21 Sebastian Spaeth <Sebastian@SSpaeth.de>
 
 	* monotone.texi: add command reference docs about kill_rev_locally
